Uploaded image for project: 'Couchbase Server'
  1. Couchbase Server
  2. MB-14696

forestdb does not restrict sharing handles among concurrent threads

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • Critical
    • 4.0.0
    • 4.0.0
    • forestdb
    • Security Level: Public
    • None
    • Triaged
    • Unknown
    • ForestDB: Oct 26 - Nov 13

    Description

      Forestdb does not support sharing handles among concurrent threads of execution.
      However, it currently does not restrict this sharing, which can result in unpredictable failures among unaware users.
      forestdb apis must return FDB_RESULT_HANDLE_BUSY if a handle is found being used in another concurrent thread of execution.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            sundar Sundar Sridharan (Inactive)
            sundar Sundar Sridharan (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes

                PagerDuty