MB-14696:Return HANDLE_BUSY err if handle is shared among threads

Enforce one handle per concurrent unit of execution by using atomics.
Return FDB_RESULT_HANDLE_BUSY if a handle is found to be in use
in another thread. Test as many apis as possible by simulating
concurrent access using anomaly test callback framework.

Change-Id: Ia1a640dc6bd49c60be5e2b92af54d4966a3903af