src/kv_instance.cc
@@ -976,6 +976,10 @@ fdb_status fdb_get_kvs_seqnum(fdb_kvs_handle *handle, fdb_seqnum_t *seqnum)
         return FDB_RESULT_INVALID_ARGS;
     }
 
+    if (!atomic_cas_uint8_t(&handle->handle_busy, 0, 1)) {
+        return FDB_RESULT_HANDLE_BUSY;
+    }
+
     if (handle->shandle) {
         // handle for snapshot
         // return MAX_SEQNUM instead of the file's sequence number
@@ -996,6 +1000,7 @@ fdb_status fdb_get_kvs_seqnum(fdb_kvs_handle *handle, fdb_seqnum_t *seqnum)
             *seqnum = fdb_kvs_get_seqnum(file, handle->kvs->id);
         }
     }
+    fdb_assert(atomic_cas_uint8_t(&handle->handle_busy, 1, 0), 1, 0);
     return FDB_RESULT_SUCCESS;
 }
 
@@ -1975,6 +1980,10 @@ fdb_status fdb_get_kvs_info(fdb_kvs_handle *handle, fdb_kvs_info *info)
         return FDB_RESULT_INVALID_ARGS;
     }
 
+    if (!atomic_cas_uint8_t(&handle->handle_busy, 0, 1)) {
+        return FDB_RESULT_HANDLE_BUSY;
+    }
+
     if (!handle->shandle) { // snapshot handle should be immutable
         fdb_check_file_reopen(handle, NULL);
         fdb_sync_db_header(handle);
@@ -2028,10 +2037,14 @@ fdb_status fdb_get_kvs_info(fdb_kvs_handle *handle, fdb_kvs_info *info)
 
     info->space_used = datasize;
     info->space_used += nlivenodes * handle->config.blocksize;
+    info->file = handle->fhandle;
 
+    fdb_assert(atomic_cas_uint8_t(&handle->handle_busy, 1, 0), 1, 0);
+
+    // This is another LIBFDB_API call, so handle is marked as free
+    // in the line above before making this call
     fdb_get_kvs_seqnum(handle, &info->last_seqnum);
 
-    info->file = handle->fhandle;
     return FDB_RESULT_SUCCESS;
 }
 
