src/transaction.cc
@@ -47,6 +47,10 @@ fdb_status fdb_begin_transaction(fdb_file_handle *fhandle,
         }
     }
 
+    if (!atomic_cas_uint8_t(&handle->handle_busy, 0, 1)) {
+        return FDB_RESULT_HANDLE_BUSY;
+    }
+
     do { // repeat until file status is not REMOVED_PENDING
         fdb_check_file_reopen(handle, NULL);
         filemgr_mutex_lock(handle->file);
@@ -55,6 +59,7 @@ fdb_status fdb_begin_transaction(fdb_file_handle *fhandle,
         if (filemgr_is_rollback_on(handle->file)) {
             // deny beginning transaction during rollback
             filemgr_mutex_unlock(handle->file);
+            fdb_assert(atomic_cas_uint8_t(&handle->handle_busy, 1, 0), 1, 0);
             return FDB_RESULT_FAIL_BY_ROLLBACK;
         }
 
@@ -88,6 +93,7 @@ fdb_status fdb_begin_transaction(fdb_file_handle *fhandle,
 
     filemgr_mutex_unlock(file);
 
+    fdb_assert(atomic_cas_uint8_t(&handle->handle_busy, 1, 0), 1, 0);
     return FDB_RESULT_SUCCESS;
 }
 
@@ -111,6 +117,10 @@ fdb_status _fdb_abort_transaction(fdb_kvs_handle *handle)
             // deny transaction on sub handle
             return FDB_RESULT_INVALID_HANDLE;
         }
+    }
+
+    if (!atomic_cas_uint8_t(&handle->handle_busy, 0, 1)) {
+        return FDB_RESULT_HANDLE_BUSY;
     }
 
     do { // repeat until file status is not REMOVED_PENDING
@@ -138,6 +148,7 @@ fdb_status _fdb_abort_transaction(fdb_kvs_handle *handle)
 
     filemgr_mutex_unlock(file);
 
+    fdb_assert(atomic_cas_uint8_t(&handle->handle_busy, 1, 0), 1, 0);
     return FDB_RESULT_SUCCESS;
 }
 
@@ -158,6 +169,10 @@ fdb_status fdb_end_transaction(fdb_file_handle *fhandle,
             // deny transaction on sub handle
             return FDB_RESULT_INVALID_HANDLE;
         }
+    }
+
+    if (!atomic_cas_uint8_t(&handle->handle_busy, 0, 1)) {
+        return FDB_RESULT_HANDLE_BUSY;
     }
 
     fdb_status fs = FDB_RESULT_SUCCESS;
@@ -191,5 +206,7 @@ fdb_status fdb_end_transaction(fdb_file_handle *fhandle,
 
         filemgr_mutex_unlock(file);
     }
+
+    fdb_assert(atomic_cas_uint8_t(&handle->handle_busy, 1, 0), 1, 0);
     return fs;
 }
